jaysa.net/src/app/styles/Home.module.css
@font-face {
  font-family: 'LemonTuesday';
  src: local('LemonTuesday'), url(../fonts/LemonTuesday.otf) format('opentype');
}

@font-face {
  font-family: 'DatangStory';
  src: local('DatangStory'), url(../fonts/DatangStory.otf) format('opentype');
}

@font-face {
  font-family: 'LibreBaskerville';
  src: local('LibreBaskerville'), url(../fonts/LibreBaskerville-Regular.ttf) format('truetype');
}

.imageWrapper {
  display: flex;
  flex-grow: 1;

  min-height: 0;
  min-width: 0;
  overflow-x: hidden;
  justify-content: center;
}


.cardBox {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.innerFriendBox {
  display: flex;
  flex-wrap: wrap;
  width: 20rem;
  gap: 5px;

  background-color: var(--gray);
  border-style: solid;
  border-color: var(--bright-gray);
  box-shadow: 2px 2px 3px black;

  color: var(--bg-color);
  font-weight: bold;
  font-size: small;

  margin: 1rem;
  padding: 0.5rem;
}

.friendBadge {
  padding: 4px;
  border-style: solid;
  border-color: var(--fg-color);
  border-top-color: var(--bright-gray);
  border-right-color: var(--bright-gray);
  image-rendering: pixelated;
}

.card {
  color: var(--bg-color);
  background-color: var(--fg1-color);
  background-image:
    linear-gradient( var(--fg1-color) 3rem, #fb4934 3rem, #F0A4A4 calc(3rem + 2px), transparent 1px),
    repeating-linear-gradient(transparent, transparent 1.5rem, #8ea598 1px, #8ea598 calc(1.5rem + 1px));
  box-shadow: 2px 2px 3px black;
  height: calc(13rem + 22px);
  width: calc(20rem + 22px);
  margin: 16px;
}

.cardTitle {
  font-family:"DatangStory";
  margin: 0;
  font-size: 1.5rem;
  padding-top: calc(1.25rem + 2px);
  text-align: center;
  padding-bottom: calc(1.7rem)
}

.cardText {
  font-family:"DatangStory";
  padding-left: 0.25rem;
  margin: 0;
  font-size: 1rem;
  padding-bottom: 1px;
}

.quickLinks {
  font-family:"DatangStory";
  background-color: var(--bright-yellow);
  color: var(--bg-color);
  height: calc(13rem + 22px);
  width: calc(13rem + 22px);
  margin: 16px;
  box-shadow: -2px 2px 15px 0 rgba(0, 0, 0, 0.5);
  transform: rotate(2deg);

  display: flex;
  justify-content: center;
  align-items: center;
  line-height: 1.7;
  font-size: 1.2rem;
}

.Link {
  text-decoration: none;
  color: var(--bg-color);
}

.Link:hover {
  color: var(--bright-gray);
}

.icon {
  width: 1rem;
  height: 1rem;
  margin: 0.25rem;
  vertical-align: middle;
}

.leftDiv {
  width: 50%;
}

.rightDiv {
  width: 50%;
  display: flex;
  justify-content: right;
}

.centerContainer {
  display: flex;
}

@media (max-aspect-ratio: 41/29) {
  .centerContainer {
    position: absolute;
  }
  .imageWrapper {
    align-items: center;
  }
}


@media (max-height: 630px) {
  .centerContainer {
    position: absolute;
  }
  .container {
    overflow: scroll;
  }
}

@media (max-width: 500px) {
  .centerContainer {
    position: absolute;
  }
  .innerFriendBox {
    width: 209px;
  } 
  .card {
    width: 14rem;
    height: 20rem;
  }
  .container {
    overflow: scroll;
  }
}

